--- a/Volta/Volta/Volta.csproj
+++ b/Volta/Volta/Volta.csproj
@@ -39,7 +39,7 @@
       <HintPath>..\..\Volta - Coisas para criar\MetroUIFramework(www.tutorialson.net)\Metro UI Framework\MetroFramework.dll</HintPath>
     </Reference>
     <Reference Include="MetroFramework.Design">
-      <HintPath>..\..\Volta - Coisas para criar\MetroUIFramework(www.tutorialson.net)\Metro UI Framework\MetroFramework.Design.dll</HintPath>
+      <HintPath>..\..\..\Volta - Coisas para criar\MetroUIFramework(www.tutorialson.net)\Metro UI Framework\MetroFramework.Design.dll</HintPath>
     </Reference>
     <Reference Include="MetroFramework.Fonts, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -71,11 +71,11 @@
     <Compile Include="frmPrincipal.Designer.cs">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmStatus.cs">
+    <Compile Include="frm_Status.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmStatus.Designer.cs">
-      <DependentUpon>frmStatus.cs</DependentUpon>
+    <Compile Include="frm_Status.Designer.cs">
+      <DependentUpon>frm_Status.cs</DependentUpon>
     </Compile>
     <Compile Include="Info_BIOS.cs" />
     <Compile Include="Info_Memoria_Armazenamento.cs" />
@@ -90,8 +90,8 @@
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmStatus.resx">
-      <DependentUpon>frmStatus.cs</DependentUpon>
+    <EmbeddedResource Include="frm_Status.resx">
+      <DependentUpon>frm_Status.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
